# ocl_query

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: platform.cpp
